[package]
name = "rotor"
version = "0.1.0"
authors = ["avramenko.a@gmail.com <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0"
rand = "0.7"
multihash = "0.12"
crypto_box = "0.5"
salsa20 = "0.7"
bs58 = "0.3"
serde = "*"
serde_json = "*"
